docs: refactor AGENTS.md into an entry point, move build mechanics to CONTRIBUTING
Bring AGENTS.md in line with the AGENTS.md convention introduced for the spec
repo in substrait-io/substrait#1117: a lean entry point plus the notes agents
specifically need, with generally-applicable build and contribution mechanics
living in the human-facing docs.

- Restructure the AGENTS.md intro into a "Start here" pointer to README.md and
  CONTRIBUTING.md.
- Add a "Keep PR descriptions high-signal" guideline: drop file lists,
  CI-verified-pass claims, and implicit process notes; keep commit bodies free
  of git trailers.
- Move the build/test/format command reference, PMD tripwires, and the
  build-logic included-build note into a new CONTRIBUTING.md "Building and
  testing" section, and fold the JDK 17 daemon-consistency and GraalVM
  native-image details into its "Gradle & JDK 17" section. AGENTS.md keeps only
  the agent-specific verification workflow.